@@ -26,7 +26,7 @@ AC_INIT(src/gerbv.c)
 
 dnl variables
 PACKAGE=gerbv
-VERSION=0.0.5
+VERSION=0.0.6pre1
 
 dnl --disable-batch : turn off guile/batch support
 AC_ARG_ENABLE(batch,
